--- a/css/profile-styles.css
+++ b/css/profile-styles.css
@@ -1192,15 +1192,15 @@
     vertical-align: middle;
 }
 
-/* Стиль для заблокированных кнопок */
-.input-group .btn[data-processing="true"] {
+.input-group .btn[data-processing="true"] 
+{
     opacity: 0.5;
     cursor: not-allowed;
     pointer-events: none;
 }
 
-/* Отключаем выделение для кнопок +/- */
-.input-group .btn {
+.input-group .btn 
+{
     user-select: none;
     -webkit-user-select: none;
     transition: opacity 0.2s;
